# splines

./: .gitignore  Makefile.in  README.md  brasf.f  brauv.f  buiaps.f  buicur.f  buicvf.f  builtg.f  buisgf.f  cholen.f  coeff.f  curva.f  curvps.f  distps.f  evapa2.f  evapa3.f  evapat.f  evaqfg.f  evppar.f  evps1d.f  evsrn.f  evsurg.f  evtan.f  fertob.f  finded.f  fundis.f  gders1.f  getiso.f  getk.f  getk2.f  getp2.f  getpoi.f  gett2.f  getta3.f  gettan.f  gpsur.f  gtimp.f  gtlcor.f  ilocli.f  (+29 more)
cpp/: CMakeLists.txt  README.md
cpp/include/splines/: arc_length.hpp  concepts.hpp  end_conditions.hpp  geometry.hpp  nearest_point.hpp  spline_curve.hpp  spline_surface.hpp  splines.hpp  tridiagonal.hpp  vec.hpp
cpp/tests/: CMakeLists.txt  test_arc_length.cpp  test_geometry.cpp  test_nearest_point.cpp  test_spline_curve.cpp  test_spline_surface.cpp  test_tridiagonal.cpp  test_vec.cpp
fortran/: INDEX.txt  Makefile.in  README.md  TESTING_SUMMARY.txt  TEST_REPORT.txt  brauv.f  buiaps.f  buicur.f  buisgf.f  configure.in  curva.f  debug_arc_length.f90  debug_circle.f90  debug_tangent.f90  distps.f  evapa2.f  evps1d.f  evtan.f  fertob.f  finded.f  getiso.f  getk2.f  getp2.f  gett2.f  getta3.f  gettan.f  ilocli.f  lengt.f  limiuv.f  loas1d.f  loas2d.f  locpfs.f  locsu2.f  locsug.f  locsur.f  myrules.make  pspl.f  putimp.f  surfb.f  test_splines.f90  (+7 more)
fortran/fixes/: FIXES_APPLIED.txt  fix_arc_length_investigation.txt  fix_nan_infinity_investigation.txt  fix_trcoe_quadratic_bug.txt
fortran/new/: evtan.f
new/: centripet.f  correctt.f  evtan.f  pspli2.f  psplin.f  surfb.f  uniform.f
