dnl Process this file with autoconf to produce a configure script.

AC_INIT([splines], [0.1])
AC_CONFIG_SRCDIR([curva.f])
AC_CONFIG_AUX_DIR([build-aux])
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_FC

dnl Keep the legacy Makefile variable names, but fill them from
dnl standard Autoconf probes so the package builds on a normal host.
ARCH="${host_cpu}"
F77="${FC}"
F77FLAGS="${FCFLAGS}"
AS_IF([test -z "$F77FLAGS"], [F77FLAGS="-O2 -ffixed-line-length-none"])

F77_HIGH_OPT="-O2 -ffixed-line-length-none"
F77_DEBUG_OPT="-O0 -g -ffixed-line-length-none"
FCPP='$(CPP) -P'
C_MYFLAGS=""
RCS_CO="co"
INC_PVM_E=""
INC_PVM_PD=""
INC_MPI=""
LIB_MPI_EUI=""
LIB_MPI_P4=""
LIB_PVM_E=""
LIB_PVM_PD=""
PVM_ROOT=""
PVM_ARCH=""
TARGET_PLATFORM_LIST="${ARCH}"
SRC_ROOT_DIR='$(srcdir)'
INSTALL_DIRS_FILENAME="install_dirs.make"
X_CFLAGS=""
X_LIBS=""
X_EXTRA_LIBS=""

AC_SUBST([ARCH])
AC_SUBST([F77])
AC_SUBST([F77FLAGS])
AC_SUBST([F77_HIGH_OPT])
AC_SUBST([F77_DEBUG_OPT])
AC_SUBST([FCPP])
AC_SUBST([C_MYFLAGS])
AC_SUBST([RCS_CO])
AC_SUBST([INC_PVM_E])
AC_SUBST([INC_PVM_PD])
AC_SUBST([INC_MPI])
AC_SUBST([LIB_MPI_EUI])
AC_SUBST([LIB_MPI_P4])
AC_SUBST([LIB_PVM_E])
AC_SUBST([LIB_PVM_PD])
AC_SUBST([PVM_ROOT])
AC_SUBST([PVM_ARCH])
AC_SUBST([TARGET_PLATFORM_LIST])
AC_SUBST([SRC_ROOT_DIR])
AC_SUBST([INSTALL_DIRS_FILENAME])
AC_SUBST([X_CFLAGS])
AC_SUBST([X_LIBS])
AC_SUBST([X_EXTRA_LIBS])

AC_CONFIG_COMMANDS([install_dirs.make], [[cat >install_dirs.make <<EOF
LIB_DIR = ${libdir_default}
BIN_DIR = ${bindir_default}
INCLUDE_DIR = ${includedir_default}
MAN_DIR = ${mandir_default}
MAN1_DIR = ${mandir_default}/man1
MAN3_DIR = ${mandir_default}/man3
MANN_DIR = ${mandir_default}/mann
INFO_DIR = ${infodir_default}
DOCS_DIR = ${datarootdir_default}/doc/${PACKAGE_TARNAME}
HTML_DIR = \$(DOCS_DIR)
ARCH_INDEP_LIB_DIR = ${datadir_default}
ARCH_INDEP_BIN_DIR = ${bindir_default}
EOF
]], [[
prefix_default="$prefix"
if test -z "$prefix_default" || test "x$prefix_default" = xNONE; then
  prefix_default="/usr/local"
fi
exec_prefix_default="$exec_prefix"
if test -z "$exec_prefix_default" || test "x$exec_prefix_default" = xNONE; then
  exec_prefix_default="$prefix_default"
fi
libdir_default="$exec_prefix_default/lib"
bindir_default="$exec_prefix_default/bin"
includedir_default="$prefix_default/include"
datarootdir_default="$prefix_default/share"
mandir_default="$datarootdir_default/man"
infodir_default="$datarootdir_default/info"
datadir_default="$datarootdir_default"
PACKAGE_TARNAME="$PACKAGE_TARNAME"
]])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
